--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -67,10 +67,10 @@
   "it_consulting": {
     "it_consulting": "IT Consulting",
     "from_idea_to_implementation": "From Idea to Reality",
-"content_for_from_idea_to_implementation": "Need tech advice?\n\nWe'll help you choose the right tools and technologies"
-    ,"it_strategy": "IT strategy and digitalization",
+"content_for_from_idea_to_implementation": "Got an idea? We'll bring it to life. \n\n From websites to mobile apps, we've got you covered.",
     "content_for_it_strategy": "Need tech advice?\n\nWe'll help you choose the right tools and technologies.",
     "software_consulting": "Software Consulting",
+    "it_strategy": "IT strategy and digitalization",
     "content_for_software_consulting": "Software solutions that fit your business perfectly.",
     "it_security": "IT Security & Audits",
     "content_for_it_security": "Protect your business from cyber threats like fake forms, attacks, or click fraud.",
