--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -200,11 +200,11 @@
     "zoho_crm": "Zoho CRM",
     "zoho_crm_description": "Streamline your sales process and manage customer relationships effectively.",
     "zoho_crm_more_info": "Zoho CRM helps you connect with your customers, automate sales processes, and enhance your business relationships. It offers powerful tools for lead management, sales automation, and analytics to drive your business growth.",
-
+    "zoho_finance": "Zoho Finance",
     "zoho_marketing": "Zoho Marketing",
+    "zoho_human_resources": "Zoho HR",
     "zoho_marketing_description": "Automate your marketing campaigns and engage customers efficiently.",
     "zoho_marketing_more_info": "Zoho Marketing enables you to create, execute, and track your marketing campaigns with ease. Utilize email marketing, social media integration, and comprehensive analytics to reach and engage your target audience effectively.",
-
     "finance": "Finance",
     "finance_description": "Manage your finances, billing, and invoicing all in one place.",
     "finance_more_info": "Our Finance solutions provide comprehensive tools for managing your company's financial operations. From invoicing and expense tracking to financial reporting and compliance, streamline all your financial processes efficiently.",
