--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -365,7 +365,7 @@
   },
   "cookieConsent": {
     "message": "Wir verwenden Cookies, um Ihre Erfahrung zu verbessern. Durch die Weiterführung akzeptieren Sie unsere Verwendung von Cookies.",
-    "button": "Ich verstehe",
+    "button": "Ich akzeptiere",
     "learnMore": "Mehr erfahren"
   },
   "privacyPolicy": {
