--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -365,7 +365,7 @@
   },
   "cookieConsent": {
     "message": "We use cookies to enhance your experience. By continuing, you accept our use of cookies.",
-    "button": "I Understand",
+    "button": "I accept",
     "learnMore": "Learn More"
   },
   "privacyPolicy": {
